--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Interview Questions</title>
+    <h2> developed by terrablader11 (Zachary Li) <\h2>
     <style>
         body {
             font-family: Arial, sans-serif;
