--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <h1>Random Interview Questions</h1>
+    <title>Random Interview Questions</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -42,6 +42,7 @@
 </head>
 <body>
     <h1>Random Interview Questions</h1>
+    <h2>developed by terrablader11</h2>
     <div class="options">
         <label for="behavioral-questions">Behavioral Questions:</label>
         <input type="number" id="behavioral-questions" min="0" max="10" value="0">
