--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Random Interview Questions </title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -40,6 +41,7 @@
     </style>
 </head>
 <body>
+    <h1> Random Interview Questions </h1>
     <div class="options">
         <label for="behavioral-questions">Behavioral Questions:</label>
         <input type="number" id="behavioral-questions" min="0" max="10" value="0">
